[package]
name = "nnli"
version = "0.0.9"
edition = "2021"
description = "🔭 interactively explore `onnx` networks in your CLI."
license = "MIT"
authors = ["David Holtz <github.com/drbh>"]

[dependencies]
candle-onnx = "0.3.1"
clap = { version = "4.4.8", features = ["derive"] }
crossterm = "0.27.0"
ratatui = { version = "0.24.0", features = ["crossterm"] }
